# asio

./: .appveyor.yml  .cirrus.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Makefile.am  README  asio.manifest  asio.podspec  boost_asio.manifest  boostify.pl  calculator.txt  conanfile.py  configure.ac  release.pl  tsify.pl
asio/: .TODO.txt  .clang-format  .clang-tidy  .cmake-format  .cmakefiles.txt  .codespellrc  .cvsignore  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  GNUmakefile  HACKING.md  INSTALL  Makefile.am  README  README.md  THANKS  TODO  asio-config-version.cmake.in  asio-config.cmake  asio-config.cmake.in  asio.manifest  asio.pc.cmake  autogen.sh  boost_asio.manifest  boostify.pl  configure.ac  configure.in  release.pl  requirements.txt  tsify.pl
asio/cmake/: AddUninstallTarget.cmake  WarningsAsErrors.cmake  coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  open-cpp-coverage.cmake.example  prelude.cmake  project-is-top-level.cmake  spell-targets.cmake  spell.cmake  variables.cmake  windows-set-path.cmake
asio/docs/: Doxyfile.in
asio/include/: CMakeLists.txt  Makefile.am  asio.hpp  net.hpp  netx.hpp
asio/include/asio/: any_completion_executor.hpp  any_completion_handler.hpp  any_io_executor.hpp  arg.hpp  as_tuple.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associated_immediate_executor.hpp  async_result.hpp  await.hpp  awaitable.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_demuxer.hpp  basic_dgram_socket.hpp  basic_file.hpp  basic_io_object.hpp  basic_io_service.hpp  basic_locking_dispatcher.hpp  basic_pipe.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_resolver.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_connector.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_socketbuf.hpp  basic_strand.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_timer.hpp  (+179 more)
asio/include/asio/detail/: addressof.hpp  aligned_alloc.hpp  apple_nw_acceptor_service.hpp  apple_nw_acceptor_service_base.hpp  apple_nw_async_op.hpp  apple_nw_async_scope.hpp  apple_nw_buffer_helpers.hpp  apple_nw_ptr.hpp  apple_nw_socket_accept_op.hpp  apple_nw_socket_connect_op.hpp  apple_nw_socket_recv_op.hpp  apple_nw_socket_send_op.hpp  apple_nw_socket_service.hpp  apple_nw_socket_service_base.hpp  apple_nw_sync_result.hpp  arg_pack.hpp  array.hpp  array_fwd.hpp  assert.hpp  atomic_count.hpp  atomic_fenced_block.hpp  base_from_cancellation_state.hpp  base_from_completion_cond.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_resize_guard.hpp  buffer_sequence_adapter.hpp  buffered_stream_storage.hpp  bulk_executor_op.hpp  call_stack.hpp  chain.hpp  channel_get_op.hpp  channel_op.hpp  channel_put_op.hpp  channel_service.hpp  chrono.hpp  chrono_time_traits.hpp  codecvt.hpp  completion_handler.hpp  composed_work.hpp  (+286 more)
asio/include/asio/execution/: allocator.hpp  any_executor.hpp  bad_executor.hpp  blocking.hpp  blocking_adaptation.hpp  bulk_execute.hpp  bulk_guarantee.hpp  can_prefer.hpp  can_query.hpp  can_require.hpp  connect.hpp  context.hpp  context_as.hpp  execute.hpp  executor.hpp  executor_future.hpp  invocable_archetype.hpp  is_oneway_executor.hpp  is_twoway_executor.hpp  mapping.hpp  occupancy.hpp  oneway.hpp  operation_state.hpp  outstanding_work.hpp  prefer.hpp  prefer_only.hpp  query.hpp  receiver.hpp  receiver_invocation_error.hpp  relationship.hpp  require.hpp  schedule.hpp  scheduler.hpp  sender.hpp  set_done.hpp  set_error.hpp  (+5 more)
asio/qnx/: .gitignore  README.md
asio/qnx/test/: README.md
asio/src/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makefile.bor  Makefile.mgw  Makefile.msc  asio.cpp  asio.hpp  asio_ssl.cpp
asio/src/asio/: basic_demuxer.hpp  basic_dgram_socket.hpp  basic_socket_acceptor.hpp  basic_socket_connector.hpp  basic_stream_socket.hpp  basic_timer_queue.hpp  buffered_recv_stream.hpp  buffered_send_stream.hpp  buffered_stream.hpp  completion_context.cpp  completion_context.hpp  completion_context_locker.cpp  completion_context_locker.hpp  counting_completion_context.cpp  counting_completion_context.hpp  demuxer.cpp  demuxer.hpp  demuxer_service.cpp  demuxer_service.hpp  demuxer_task.cpp  demuxer_task.hpp  dgram_socket.cpp  dgram_socket.hpp  dgram_socket_service.cpp  dgram_socket_service.hpp  generic_address.cpp  generic_address.hpp  inet_address_v4.cpp  inet_address_v4.hpp  service.cpp  service.hpp  service_provider.cpp  service_provider.hpp  service_provider_factory.cpp  service_provider_factory.hpp  service_type_id.hpp  service_unavailable.cpp  service_unavailable.hpp  socket_acceptor.cpp  socket_acceptor.hpp  (+18 more)
asio/src/doc/: .cvsignore  .gitignore  Jamfile.v2  Makefile.am  asio.css  asio.dox.in  asio.qbk  asio_dox.txt  asio_footer.htm  asio_header.htm  asioref.xsl  building.html.in  design.dox.in  design.qbk  design_header.htm  doxy2qbk.pl  examples.dox.in  examples.qbk  examples_dox.txt  examples_footer.htm  examples_header.htm  external.doxytags  history.qbk  index.html.in  index.xml  makepdf.pl  model_dox.txt  net_ts.qbk  overview.qbk  platform_macros.pl  platform_macros.qbk  quickref.xml  reference.dox  reference.dox.in  reference.qbk  reference.xsl  reference_dox.txt  reference_header.htm  release_checklist.htm  requirements.qbk  (+8 more)
asio/src/examples/: CMakeLists.txt
asio/src/tests/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  dgram_echo_client_test.cpp  dgram_echo_server_test.cpp  dispatcher_test.cpp  echo_client_test.cpp  echo_server_test.cpp  error_handler_test.cpp  socket_accept_test.cpp  timed_accept_test.cpp  timed_connect_test.cpp  timed_dgram_recv_test.cpp  timer_queue_test.cpp  timer_test.cpp  tpc_echo_server_test.cpp
asio/src/tools/: handlerviz.pl
(+3263 files in other folders)
