AC_INIT(src/asio.hpp)
AM_INIT_AUTOMAKE(asio, 0.1.1)

AM_PROG_CC_C_O
AC_PROG_CXX
AC_LANG(C++)
AC_PROG_RANLIB

AC_DEFINE(_REENTRANT)

AC_ARG_WITH(boost,
  AC_HELP_STRING([--with-boost=DIR],[location of boost distribution]),
[
  CPPFLAGS="$CPPFLAGS -I${withval}"
  LDFLAGS="$LDFLAGS -L${withval}/libs/thread/build/bin-stage"
])

AC_CHECK_HEADER([boost/thread.hpp],,
[
  echo "Can't find boost headers. Please check the location of the boost"
  echo "distribution and rerun configure using the --with-boost=DIR option."
  exit 1
],[])

if test "$GXX" = yes; then
  CXXFLAGS="$CXXFLAGS -ftemplate-depth-32"
fi

AC_CHECK_PROG(DOXYGEN_FOUND,doxygen,yes)
AM_CONDITIONAL(HAVE_DOXYGEN,test x$DOXYGEN_FOUND = xyes)
AC_CHECK_PROG(HAVE_DOT,dot,YES,NO)
AC_SUBST(HAVE_DOT)

AC_OUTPUT([Makefile src/Makefile src/doc/Makefile src/doc/asio.dox])
