nobase_include_HEADERS = \
	asio.hpp \
	asio/basic_datagram_socket.hpp \
	asio/basic_deadline_timer.hpp \
	asio/basic_demuxer.hpp \
	asio/basic_locking_dispatcher.hpp \
	asio/basic_socket_acceptor.hpp \
	asio/basic_stream_socket.hpp \
	asio/buffer.hpp \
	asio/buffered_read_stream_fwd.hpp \
	asio/buffered_read_stream.hpp \
	asio/buffered_stream_fwd.hpp \
	asio/buffered_stream.hpp \
	asio/buffered_write_stream_fwd.hpp \
	asio/buffered_write_stream.hpp \
	asio/buffers.hpp \
	asio/consuming_buffers.hpp \
	asio/datagram_socket.hpp \
	asio/datagram_socket_service.hpp \
	asio/deadline_timer.hpp \
	asio/deadline_timer_service.hpp \
	asio/default_error_handler.hpp \
	asio/demuxer.hpp \
	asio/demuxer_service.hpp \
	asio/detail/bind_handler.hpp \
	asio/detail/buffer_resize_guard.hpp \
	asio/detail/demuxer_run_call_stack.hpp \
	asio/detail/epoll_reactor.hpp \
	asio/detail/event.hpp \
	asio/detail/fd_set_adapter.hpp \
	asio/detail/hash_map.hpp \
	asio/detail/locking_dispatcher_impl.hpp \
	asio/detail/locking_dispatcher_service.hpp \
	asio/detail/mutex.hpp \
	asio/detail/pipe_select_interrupter.hpp \
	asio/detail/pop_options.hpp \
	asio/detail/posix_event.hpp \
	asio/detail/posix_mutex.hpp \
	asio/detail/posix_signal_blocker.hpp \
	asio/detail/posix_thread.hpp \
	asio/detail/posix_time.hpp \
	asio/detail/posix_tss_ptr.hpp \
	asio/detail/push_options.hpp \
	asio/detail/reactive_deadline_timer_service.hpp \
	asio/detail/reactive_socket_service.hpp \
	asio/detail/reactor_op_queue.hpp \
	asio/detail/reactor_timer_queue.hpp \
	asio/detail/scoped_lock.hpp \
	asio/detail/select_interrupter.hpp \
	asio/detail/select_reactor.hpp \
	asio/detail/service_registry.hpp \
	asio/detail/signal_blocker.hpp \
	asio/detail/signal_init.hpp \
	asio/detail/socket_holder.hpp \
	asio/detail/socket_ops.hpp \
	asio/detail/socket_select_interrupter.hpp \
	asio/detail/socket_types.hpp \
	asio/detail/task_demuxer_service.hpp \
	asio/detail/thread.hpp \
	asio/detail/time.hpp \
	asio/detail/tss_ptr.hpp \
	asio/detail/win_event.hpp \
	asio/detail/win_iocp_demuxer_service.hpp \
	asio/detail/win_iocp_operation.hpp \
	asio/detail/win_iocp_socket_service.hpp \
	asio/detail/win_mutex.hpp \
	asio/detail/win_signal_blocker.hpp \
	asio/detail/winsock_init.hpp \
	asio/detail/win_thread.hpp \
	asio/detail/win_time.hpp \
	asio/detail/win_tss_ptr.hpp \
	asio/error_handler.hpp \
	asio/error.hpp \
	asio/fixed_buffer.hpp \
	asio/io_control.hpp \
	asio/ipv4/address.hpp \
	asio/ipv4/basic_host_resolver.hpp \
	asio/ipv4/detail/host_resolver_service.hpp \
	asio/ipv4/host.hpp \
	asio/ipv4/host_resolver.hpp \
	asio/ipv4/host_resolver_service.hpp \
	asio/ipv4/multicast.hpp \
	asio/ipv4/socket_option.hpp \
	asio/ipv4/tcp.hpp \
	asio/ipv4/udp.hpp \
	asio/is_read_buffered.hpp \
	asio/is_write_buffered.hpp \
	asio/locking_dispatcher.hpp \
	asio/locking_dispatcher_service.hpp \
	asio/null_error_handler.hpp \
	asio/placeholders.hpp \
	asio/read.hpp \
	asio/service_factory.hpp \
	asio/socket_acceptor.hpp \
	asio/socket_acceptor_service.hpp \
	asio/socket_base.hpp \
	asio/socket_option.hpp \
	asio/stream_socket.hpp \
	asio/stream_socket_service.hpp \
	asio/thread.hpp \
	asio/time_traits.hpp \
	asio/wrapped_handler.hpp \
	asio/write.hpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
