# find . -name "*.*pp" | sed -e 's/^\.\///' | sed -e 's/^.*$/  & \\/' | sort
nobase_include_HEADERS = \
	asio/basic_datagram_socket.hpp \
	asio/basic_deadline_timer.hpp \
	asio/basic_io_object.hpp \
	asio/basic_raw_socket.hpp \
	asio/basic_serial_port.hpp \
	asio/basic_socket_acceptor.hpp \
	asio/basic_socket.hpp \
	asio/basic_socket_iostream.hpp \
	asio/basic_socket_streambuf.hpp \
	asio/basic_streambuf_fwd.hpp \
	asio/basic_streambuf.hpp \
	asio/basic_stream_socket.hpp \
	asio/buffered_read_stream_fwd.hpp \
	asio/buffered_read_stream.hpp \
	asio/buffered_stream_fwd.hpp \
	asio/buffered_stream.hpp \
	asio/buffered_write_stream_fwd.hpp \
	asio/buffered_write_stream.hpp \
	asio/buffer.hpp \
	asio/buffers_iterator.hpp \
	asio/completion_condition.hpp \
	asio/datagram_socket_service.hpp \
	asio/deadline_timer.hpp \
	asio/deadline_timer_service.hpp \
	asio/detail/array_fwd.hpp \
	asio/detail/base_from_completion_cond.hpp \
	asio/detail/bind_handler.hpp \
	asio/detail/buffered_stream_storage.hpp \
	asio/detail/buffer_resize_guard.hpp \
	asio/detail/buffer_sequence_adapter.hpp \
	asio/detail/call_stack.hpp \
	asio/detail/completion_handler.hpp \
	asio/detail/config.hpp \
	asio/detail/consuming_buffers.hpp \
	asio/detail/deadline_timer_service.hpp \
	asio/detail/descriptor_ops.hpp \
	asio/detail/descriptor_read_op.hpp \
	asio/detail/descriptor_write_op.hpp \
	asio/detail/dev_poll_reactor_fwd.hpp \
	asio/detail/dev_poll_reactor.hpp \
	asio/detail/epoll_reactor_fwd.hpp \
	asio/detail/epoll_reactor.hpp \
	asio/detail/eventfd_select_interrupter.hpp \
	asio/detail/event.hpp \
	asio/detail/fd_set_adapter.hpp \
	asio/detail/fenced_block.hpp \
	asio/detail/gcc_arm_fenced_block.hpp \
	asio/detail/gcc_hppa_fenced_block.hpp \
	asio/detail/gcc_sync_fenced_block.hpp \
	asio/detail/gcc_x86_fenced_block.hpp \
	asio/detail/handler_alloc_helpers.hpp \
	asio/detail/handler_invoke_helpers.hpp \
	asio/detail/hash_map.hpp \
	asio/detail/impl/descriptor_ops.ipp \
	asio/detail/impl/dev_poll_reactor.hpp \
	asio/detail/impl/dev_poll_reactor.ipp \
	asio/detail/impl/epoll_reactor.hpp \
	asio/detail/impl/epoll_reactor.ipp \
	asio/detail/impl/eventfd_select_interrupter.ipp \
	asio/detail/impl/kqueue_reactor.hpp \
	asio/detail/impl/kqueue_reactor.ipp \
	asio/detail/impl/pipe_select_interrupter.ipp \
	asio/detail/impl/posix_event.ipp \
	asio/detail/impl/posix_mutex.ipp \
	asio/detail/impl/posix_thread.ipp \
	asio/detail/impl/posix_tss_ptr.ipp \
	asio/detail/impl/reactive_descriptor_service.ipp \
	asio/detail/impl/reactive_serial_port_service.ipp \
	asio/detail/impl/reactive_socket_service_base.ipp \
	asio/detail/impl/resolver_service_base.ipp \
	asio/detail/impl/select_reactor.hpp \
	asio/detail/impl/select_reactor.ipp \
	asio/detail/impl/service_registry.hpp \
	asio/detail/impl/service_registry.ipp \
	asio/detail/impl/socket_ops.ipp \
	asio/detail/impl/socket_select_interrupter.ipp \
	asio/detail/impl/strand_service.hpp \
	asio/detail/impl/strand_service.ipp \
	asio/detail/impl/task_io_service.hpp \
	asio/detail/impl/task_io_service.ipp \
	asio/detail/impl/throw_error.ipp \
	asio/detail/impl/timer_queue.ipp \
	asio/detail/impl/timer_queue_set.ipp \
	asio/detail/impl/win_event.ipp \
	asio/detail/impl/win_iocp_handle_service.ipp \
	asio/detail/impl/win_iocp_io_service.hpp \
	asio/detail/impl/win_iocp_io_service.ipp \
	asio/detail/impl/win_iocp_serial_port_service.ipp \
	asio/detail/impl/win_iocp_socket_service_base.ipp \
	asio/detail/impl/win_mutex.ipp \
	asio/detail/impl/winsock_init.ipp \
	asio/detail/impl/win_thread.ipp \
	asio/detail/impl/win_tss_ptr.ipp \
	asio/detail/io_control.hpp \
	asio/detail/kqueue_reactor_fwd.hpp \
	asio/detail/kqueue_reactor.hpp \
	asio/detail/local_free_on_block_exit.hpp \
	asio/detail/macos_fenced_block.hpp \
	asio/detail/mutex.hpp \
	asio/detail/noncopyable.hpp \
	asio/detail/null_event.hpp \
	asio/detail/null_fenced_block.hpp \
	asio/detail/null_mutex.hpp \
	asio/detail/null_signal_blocker.hpp \
	asio/detail/null_thread.hpp \
	asio/detail/null_tss_ptr.hpp \
	asio/detail/object_pool.hpp \
	asio/detail/old_win_sdk_compat.hpp \
	asio/detail/operation.hpp \
	asio/detail/op_queue.hpp \
	asio/detail/pipe_select_interrupter.hpp \
	asio/detail/pop_options.hpp \
	asio/detail/posix_event.hpp \
	asio/detail/posix_fd_set_adapter.hpp \
	asio/detail/posix_mutex.hpp \
	asio/detail/posix_signal_blocker.hpp \
	asio/detail/posix_thread.hpp \
	asio/detail/posix_tss_ptr.hpp \
	asio/detail/push_options.hpp \
	asio/detail/reactive_descriptor_service.hpp \
	asio/detail/reactive_null_buffers_op.hpp \
	asio/detail/reactive_serial_port_service.hpp \
	asio/detail/reactive_socket_accept_op.hpp \
	asio/detail/reactive_socket_connect_op.hpp \
	asio/detail/reactive_socket_recvfrom_op.hpp \
	asio/detail/reactive_socket_recv_op.hpp \
	asio/detail/reactive_socket_send_op.hpp \
	asio/detail/reactive_socket_sendto_op.hpp \
	asio/detail/reactive_socket_service_base.hpp \
	asio/detail/reactive_socket_service.hpp \
	asio/detail/reactor_fwd.hpp \
	asio/detail/reactor.hpp \
	asio/detail/reactor_op.hpp \
	asio/detail/reactor_op_queue.hpp \
	asio/detail/regex_fwd.hpp \
	asio/detail/resolve_endpoint_op.hpp \
	asio/detail/resolve_op.hpp \
	asio/detail/resolver_service_base.hpp \
	asio/detail/resolver_service.hpp \
	asio/detail/scoped_lock.hpp \
	asio/detail/select_interrupter.hpp \
	asio/detail/select_reactor_fwd.hpp \
	asio/detail/select_reactor.hpp \
	asio/detail/service_registry_fwd.hpp \
	asio/detail/service_registry.hpp \
	asio/detail/shared_ptr.hpp \
	asio/detail/signal_blocker.hpp \
	asio/detail/signal_init.hpp \
	asio/detail/socket_holder.hpp \
	asio/detail/socket_ops.hpp \
	asio/detail/socket_option.hpp \
	asio/detail/socket_select_interrupter.hpp \
	asio/detail/socket_types.hpp \
	asio/detail/solaris_fenced_block.hpp \
	asio/detail/strand_service.hpp \
	asio/detail/task_io_service_fwd.hpp \
	asio/detail/task_io_service.hpp \
	asio/detail/task_io_service_operation.hpp \
	asio/detail/thread.hpp \
	asio/detail/throw_error.hpp \
	asio/detail/timer_op.hpp \
	asio/detail/timer_queue_base.hpp \
	asio/detail/timer_queue_fwd.hpp \
	asio/detail/timer_queue.hpp \
	asio/detail/timer_queue_set.hpp \
	asio/detail/timer_scheduler_fwd.hpp \
	asio/detail/timer_scheduler.hpp \
	asio/detail/tss_ptr.hpp \
	asio/detail/wait_handler.hpp \
	asio/detail/weak_ptr.hpp \
	asio/detail/wince_thread.hpp \
	asio/detail/win_event.hpp \
	asio/detail/win_fd_set_adapter.hpp \
	asio/detail/win_fenced_block.hpp \
	asio/detail/win_iocp_handle_read_op.hpp \
	asio/detail/win_iocp_handle_service.hpp \
	asio/detail/win_iocp_handle_write_op.hpp \
	asio/detail/win_iocp_io_service_fwd.hpp \
	asio/detail/win_iocp_io_service.hpp \
	asio/detail/win_iocp_null_buffers_op.hpp \
	asio/detail/win_iocp_operation.hpp \
	asio/detail/win_iocp_overlapped_op.hpp \
	asio/detail/win_iocp_overlapped_ptr.hpp \
	asio/detail/win_iocp_serial_port_service.hpp \
	asio/detail/win_iocp_socket_accept_op.hpp \
	asio/detail/win_iocp_socket_recvfrom_op.hpp \
	asio/detail/win_iocp_socket_recv_op.hpp \
	asio/detail/win_iocp_socket_send_op.hpp \
	asio/detail/win_iocp_socket_service_base.hpp \
	asio/detail/win_iocp_socket_service.hpp \
	asio/detail/win_mutex.hpp \
	asio/detail/winsock_init.hpp \
	asio/detail/win_thread.hpp \
	asio/detail/win_tss_ptr.hpp \
	asio/detail/wrapped_handler.hpp \
	asio/error_code.hpp \
	asio/error.hpp \
	asio/handler_alloc_hook.hpp \
	asio/handler_invoke_hook.hpp \
	asio.hpp \
	asio/impl/error_code.ipp \
	asio/impl/error.ipp \
	asio/impl/io_service.hpp \
	asio/impl/io_service.ipp \
	asio/impl/read_at.hpp \
	asio/impl/read.hpp \
	asio/impl/read_until.hpp \
	asio/impl/serial_port_base.hpp \
	asio/impl/serial_port_base.ipp \
	asio/impl/src.cpp \
	asio/impl/src.hpp \
	asio/impl/write_at.hpp \
	asio/impl/write.hpp \
	asio/io_service.hpp \
	asio/ip/address.hpp \
	asio/ip/address_v4.hpp \
	asio/ip/address_v6.hpp \
	asio/ip/basic_endpoint.hpp \
	asio/ip/basic_resolver_entry.hpp \
	asio/ip/basic_resolver.hpp \
	asio/ip/basic_resolver_iterator.hpp \
	asio/ip/basic_resolver_query.hpp \
	asio/ip/detail/endpoint.hpp \
	asio/ip/detail/impl/endpoint.ipp \
	asio/ip/detail/socket_option.hpp \
	asio/ip/host_name.hpp \
	asio/ip/icmp.hpp \
	asio/ip/impl/address.hpp \
	asio/ip/impl/address.ipp \
	asio/ip/impl/address_v4.hpp \
	asio/ip/impl/address_v4.ipp \
	asio/ip/impl/address_v6.hpp \
	asio/ip/impl/address_v6.ipp \
	asio/ip/impl/basic_endpoint.hpp \
	asio/ip/impl/host_name.ipp \
	asio/ip/multicast.hpp \
	asio/ip/resolver_query_base.hpp \
	asio/ip/resolver_service.hpp \
	asio/ip/tcp.hpp \
	asio/ip/udp.hpp \
	asio/ip/unicast.hpp \
	asio/ip/v6_only.hpp \
	asio/is_read_buffered.hpp \
	asio/is_write_buffered.hpp \
	asio/local/basic_endpoint.hpp \
	asio/local/connect_pair.hpp \
	asio/local/datagram_protocol.hpp \
	asio/local/detail/endpoint.hpp \
	asio/local/detail/impl/endpoint.ipp \
	asio/local/stream_protocol.hpp \
	asio/placeholders.hpp \
	asio/posix/basic_descriptor.hpp \
	asio/posix/basic_stream_descriptor.hpp \
	asio/posix/descriptor_base.hpp \
	asio/posix/stream_descriptor.hpp \
	asio/posix/stream_descriptor_service.hpp \
	asio/raw_socket_service.hpp \
	asio/read_at.hpp \
	asio/read.hpp \
	asio/read_until.hpp \
	asio/serial_port_base.hpp \
	asio/serial_port.hpp \
	asio/serial_port_service.hpp \
	asio/socket_acceptor_service.hpp \
	asio/socket_base.hpp \
	asio/ssl/basic_context.hpp \
	asio/ssl/context_base.hpp \
	asio/ssl/context.hpp \
	asio/ssl/context_service.hpp \
	asio/ssl/detail/openssl_context_service.hpp \
	asio/ssl/detail/openssl_init.hpp \
	asio/ssl/detail/openssl_operation.hpp \
	asio/ssl/detail/openssl_stream_service.hpp \
	asio/ssl/detail/openssl_types.hpp \
	asio/ssl.hpp \
	asio/ssl/stream_base.hpp \
	asio/ssl/stream.hpp \
	asio/ssl/stream_service.hpp \
	asio/strand.hpp \
	asio/streambuf.hpp \
	asio/stream_socket_service.hpp \
	asio/system_error.hpp \
	asio/thread.hpp \
	asio/time_traits.hpp \
	asio/version.hpp \
	asio/windows/basic_handle.hpp \
	asio/windows/basic_random_access_handle.hpp \
	asio/windows/basic_stream_handle.hpp \
	asio/windows/overlapped_ptr.hpp \
	asio/windows/random_access_handle.hpp \
	asio/windows/random_access_handle_service.hpp \
	asio/windows/stream_handle.hpp \
	asio/windows/stream_handle_service.hpp \
	asio/write_at.hpp \
	asio/write.hpp

MAINTAINERCLEANFILES = \
	$(srcdir)/Makefile.in
